# Login form submit action - In Progress

--- a/templates/login.html
+++ b/templates/login.html
@@ -4,16 +4,11 @@
 
 {% block content %}
 	<div class="col-lg-6">
-	    <form role="form" id="login-form" class="form-horizontal">
+	    <form role="form" id="login-form" method="post" action="/login"  class="form-horizontal">
 	    	<fieldset>
 		        <legend>Login</legend>
 		        {% csrf_token %}
-		        <div class="form-group">
-	                {% bootstrap_field form.email %}
-              	</div>
-              	<div class="form-group">
-	                {% bootstrap_field form.password %}
-              	</div>
+		        {% bootstrap_form form %}
 		        <div class="form-group">
 					<div class="col-lg-10 col-lg-offset-2">
 					 	<button type="submit" class="btn btn-primary">Submit</button>
