--- a/templates/base.html
+++ b/templates/base.html
@@ -30,12 +30,12 @@
                     </ul>
                     {% if user.is_authenticated %}
                     <ul class="nav navbar-nav navbar-right">
-                        <li><a href="/login" class="login-link">{{ user.username }}</a></li>
+                        <li><a href="#" class="login-link">{{ user.username }}</a></li>
                         <li><a href="#">Logout</a></li>
                     </ul>
                     {% else %}
                     <ul class="nav navbar-nav navbar-right">
-                        <li><a href="accounts/login" class="login-link">Login</a></li>
+                        <li><a href="/login" class="login-link">Login</a></li>
                         <li><a href="#">Register</a></li>
                     </ul>
                     {% endif %}
