--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -1,3 +1,24 @@
+.font-18p {
+	font-size: 18px !important;
+}
+
 .main-content {
 	margin-top: 5em;
+}
+
+.job-skill {
+	color: #39739d;
+    background-color: #e1ecf4;
+    border-color: #e1ecf4;
+    display: inline-block;
+    margin: 2px 2px 2px 0;
+    padding: 4px 5px 5px;
+    font-size: 11px;
+    line-height: 1;
+    text-decoration: none;
+    text-transform: lowercase;
+    border-width: 1px;
+    border-style: solid;
+    white-space: nowrap;
+    transition: all .1s ease-in-out;
 }
