--- a/templates/jobs/index.html
+++ b/templates/jobs/index.html
@@ -11,32 +11,34 @@
 			    	{% for job in jobs %}
 			    	<div class="job-block">
 				    	<h3 class="text-primary">
-				    	    <a href="#">{{ job.title }}</a><br />
+				    	    <a href="{% url 'job_detail' job.id %}">{{ job.title }}</a><br />
 				    	</h3>
 				    	{{ job.description }} <br />
 						<span class="text-warning">
 							Last Date: {{ job.last_date }} <br />
 						</span>
 						<span class="text-muted">
-							Recruiter: {{ job.recruiter }} <br />
+							Recruiter: {{ job.created_by }} <br />
 						</span>
 						<hr>
 					</div>
 					{% endfor %}
-					<div class="pagination">
-					    <span class="step-links">
-					        {% if jobs.has_previous %}
-					            <a href="?page={{ jobs.previous_page_number }}">previous</a>
-					        {% endif %}
-					        <span class="current">
-					            Page {{ jobs.number }} of {{ jobs.paginator.num_pages }}
-					        </span>
+					{% if jobs %}
+						<div class="pagination">
+						    <span class="step-links">
+						        {% if jobs.has_previous %}
+						            <a href="?page={{ jobs.previous_page_number }}">previous</a>
+						        {% endif %}
+						        <span class="current">
+						            Page {{ jobs.number }} of {{ jobs.paginator.num_pages }}
+						        </span>
 
-					        {% if jobs.has_next %}
-					            <a href="?page={{ jobs.next_page_number }}">next</a>
-					        {% endif %}
-					    </span>
-					</div>
+						        {% if jobs.has_next %}
+						            <a href="?page={{ jobs.next_page_number }}">next</a>
+						        {% endif %}
+						    </span>
+						</div>
+					{% endif %}
 			    </div>
 		    </div>
 		</div>
