--- a/templates/base.html
+++ b/templates/base.html
@@ -31,7 +31,7 @@
                     {% if user.is_authenticated %}
                     <ul class="nav navbar-nav navbar-right">
                         <li><a href="#" class="login-link">{{ user.username }}</a></li>
-                        <li><a href="#">Logout</a></li>
+                        <li><a href="{% url 'logout' %}">Logout</a></li>
                     </ul>
                     {% else %}
                     <ul class="nav navbar-nav navbar-right">
